--- a/index.html
+++ b/index.html
@@ -75,21 +75,23 @@
                 </div>
             </div>
         </section>
-        <section class="clientes-contenedor">
-            <h2 class="titulo">que dicen nuestros clientes</h2>
-            <div class="cards">
-                <div class="card">
-                    <img src="jorge.jpg" alt="">
-                    <div class="contenido-texto-card">
-                        <h4>Name</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, rerum?</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="jorge.jpg" alt="">
-                    <div class="contenido-texto-card">
-                        <h4>Name</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, rerum?</p>
+        <section>
+            <div class="clientes-contenedor">
+                <h2 class="titulo">que dicen nuestros clientes</h2>
+                <div class="cards">
+                    <div class="card">
+                        <img src="jorge.jpg" alt="">
+                        <div class="contenido-texto-card">
+                            <h4>Name</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, rerum?</p>
+                        </div>
+                        </div>
+                    <div class="card">
+                        <img src="jorge.jpg" alt="">
+                        <div class="contenido-texto-card">
+                            <h4>Name</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, rerum?</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -118,16 +120,16 @@
         </section>
     </main>
     <footer>
-        <div class="contenedor">
-            <div class="content-foo">
+        <div class="contenedor-footer">
+            <div class="contenedor-foo">
                 <h4>Phone</h4>
                 <p>+54 11 37706136</p>
             </div>
-            <div class="content-foo">
+            <div class="contenedor-foo">
                 <h4>Email</h4>
                 <p>jorgitoxjff@gmial.com</p>
             </div>
-            <div class="content-foo">
+            <div class="contenedor-foo">
                 <h4>Instagram</h4>
                 <p>@georgecontras</p>
             </div>
