--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <a href="a">Portafolio</a>
             <a href="a">Servicios</a>
             <a href="a">Contacto</a>
+            <img src="logo.png" class="logo">
         </nav>
         <section class="textos-header">
-            <h1>Portafolio</h1>
-            <h2>Argentina Programa</h2>
+            <h1>Jorge Contreras</h1>
+            <h2>DEVELOPER</h2>
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 352.36,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: rgb(255, 255, 255);"></path>
         </svg></div>
@@ -31,16 +32,13 @@
         <section class="contenedor_sobre-nosotros">
             <h2 class="titulo">Nuestro Producto</h2>
             <div class="contenedor-sobre-nosotros">
-                <img src="ilustracion.verde.jpg" class="imagen-about-us">
+                <img src="jorge.jpg" class="imagen-about-us">
                 <div class="contenido-textos">
-                    <h3><span>1</span> los mejores productos</h3>
+                    <h3>los mejores productos</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Molestias perferendis fuga dolorum in, dicta sunt possimus culpa fugit cumque consequatur vel. 
                     Hic saepe totam ut ullam optio. Quasi, sed in.</p>
-                    <h3><span>2</span> los mejores productos</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Molestias perferendis fuga dolorum in, dicta sunt possimus culpa fugit cumque consequatur vel. 
-                    Hic saepe totam ut ullam optio. Quasi, sed in.</p>
+                    
                 </div>     
             </div>
         </section>
@@ -75,7 +73,7 @@
                 </div>
             </div>
         </section>
-        <section>
+ <!--       <section>
             <div class="clientes-contenedor">
                 <h2 class="titulo">que dicen nuestros clientes</h2>
                 <div class="cards">
@@ -95,7 +93,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
         <section class="about-services">
             <div class="contenedor">
                 <h2 class="titulo">nuestros Servicios</h2>
