--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-UA-Compatible" content="ie=edge">
     <title>Jorge Contreras</title>
-    <link rel="icon" href="j.ico">
+    <link rel="icon" href="img/j.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
             <a href="a">Portafolio</a>
             <a href="a">Servicios</a>
             <a href="a">Contacto</a>
-            <img src="logo.png" class="logo">
+            <img src="img/logo.png" class="logo">
         </nav>
         <section class="textos-header">
             <h1>Jorge Contreras</h1>
@@ -32,7 +32,7 @@
         <section class="contenedor_sobre-nosotros">
             <h2 class="titulo">Nuestro Producto</h2>
             <div class="contenedor-sobre-nosotros">
-                <img src="jorge.jpg" class="imagen-about-us">
+                <img src="img/jorge.jpg" class="imagen-about-us">
                 <div class="contenido-textos">
                     <h3>los mejores productos</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -47,25 +47,25 @@
                 <h2 class="titulo">portafolio</h2>
                 <div class="galeria-portafolio">
                     <div class="imagen-portafolio">
-                        <img src="laptop.jpg" alt="">
+                        <img src="img/laptop.jpg" alt="">
                         <div class="hover-galeria">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="laptop.jpg" alt="">
+                        <img src="img/laptop.jpg" alt="">
                         <div class="hover-galeria">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="laptop.jpg" alt="">
+                        <img src="img/laptop.jpg" alt="">
                         <div class="hover-galeria">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="laptop.jpg" alt="">
+                        <img src="img/laptop.jpg" alt="">
                         <div class="hover-galeria">
                             <p>Nuestro trabajo</p>
                         </div>
@@ -99,17 +99,17 @@
                 <h2 class="titulo">nuestros Servicios</h2>
                 <div class="servicios-contenedor">
                     <div class="servicio-individual">
-                        <img src="escritorio-verde.jpg" alt="">
+                        <img src="img/escritorio-verde.jpg" alt="">
                         <h3>name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, vero.</p> 
                     </div>
                     <div class="servicio-individual">
-                        <img src="mano-verde.jpg" alt="">
+                        <img src="img/mano-verde.jpg" alt="">
                         <h3>name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, vero.</p> 
                     </div>
                     <div class="servicio-individual">
-                        <img src="verde-sentado.jpg" alt="">
+                        <img src="img/verde-sentado.jpg" alt="">
                         <h3>name</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, vero.</p> 
                     </div>
@@ -120,6 +120,8 @@
     <footer>
         <div class="contenedor-footer">
             <div class="contenedor-foo">
+                <a href="/cdn-cgi/l/email-protection#b5d0cdd4d8c5d9d0f5d0cdd4d8c5d9d09bd6dad8" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a
+                    >
                 <h4>Phone</h4>
                 <p>+54 11 37706136</p>
             </div>
