--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-UA-Compatible" content="ie=edge">
     <title>Jorge Contreras</title>
-    <link rel="icon" href="img/j.ico">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"/>
+    <script src="https://kit.fontawesome.com/bd455049bc.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="img/j.ico" >
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -117,25 +120,28 @@
             </div>
         </section>
     </main>
+        
     <footer>
-        <div class="contenedor-footer">
+        <div id="contact" class="contenedor-footer">
             <div class="contenedor-foo">
-                <a href="/cdn-cgi/l/email-protection#b5d0cdd4d8c5d9d0f5d0cdd4d8c5d9d09bd6dad8" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a
-                    >
-                <h4>Phone</h4>
-                <p>+54 11 37706136</p>
+              <h2>Let's work together...</h2>
             </div>
-            <div class="contenedor-foo">
-                <h4>Email</h4>
-                <p>jorgitoxjff@gmial.com</p>
-            </div>
-            <div class="contenedor-foo">
-                <h4>Instagram</h4>
-                <p>@georgecontras</p>
+            <div class="contact-links">       
+              <a href="https://www.instagram.com/georgecontras/" target="_blank" class="icon icon--instagram"><i class="fa-brands fa-instagram"></i></a>
+
+              <a href="https://github.com/georgecontras/" target="_blank" class="icon icon--github"><i class="fab fa-github"></i></a>
+
+              <a href="/cdn-cgi/l/email-protection#b5d0cdd4d8c5d9d0f5d0cdd4d8c5d9d09bd6dad8" class="icon icon--linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+
+              <a href="/cdn-cgi/l/email-protection#b5d0cdd4d8c5d9d0f5d0cdd4d8c5d9d09bd6dad8" class="icon icon--email"><i class="fas fa-at"></i></a> 
+
+              <a href="tel:555-555-5555" class="icon icon--whatsapp"> <i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
-        <h2 class="titulo-final">&copy; Jorge Contreras</h2>
+    
+        <h2 class="titulo-final">&copy; create by Jorge Contreras</h2>
     </footer>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 </body>
 
 </html>
